addes some missing stuff

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,5 +1,6 @@
 {
   "name": "contracts",
+  "version": "0.1.0",
   "packageManager": "yarn@3.2.4",
   "scripts": {
     "compile": "npx hardhat compile",
