--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "<your-project-name>",
+  "name": "starter-test",
   "version": "0.1.0",
   "private": true,
   "workspaces": [
@@ -7,6 +7,7 @@
     "packages/web"
   ],
   "scripts": {
+    "setup": "yarn install && cd packages/web && yarn install && cd ../contracts && yarn install",
     "web:dev": "yarn workspace web dev",
     "web:build": "yarn workspace web build",
     "web:start": "yarn workspace web start",
